:lit: Completed styling

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
     <div class="grid-cont">
         <div class="top-left-dummy" id="top-left-dummy-box"></div>
         <div class="address-col-cont" id="address-col-cont"></div>
-        <div class="address-row-cont" id="address-row-cont"></div>
-        <div class="cells-cont" id="cells-cont"></div>
+        <div class="cells-cont" id="cells-cont">
+            <div class="address-row-cont" id="address-row-cont"></div>
+        </div>
     </div>
     <div class="sheets-cont", id="sheets">
         <div class="sheet-add-icon", id="sheet-add-icon">
