:boom: added implementations of the formula bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-    <title>Sheets(1:33:57)</title> 
+    <title>Sheets(10:05)</title> 
 </head>
 <body>
     <div class="page-actions-cont">
@@ -95,5 +95,6 @@
 
     <script src="./grid.js"></script>
     <script src="./cell-properties.js"></script>
+    <script src="./formula.js"></script>
 </body>
 </html>
