--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <script src="./grid.js"></script>
     <script src="./cell-properties.js"></script>
+    <script src="./cycleValidation.js"></script>
     <script src="./formula.js"></script>
 </body>
 </html>
