:sparkles: implemented sheet handling functionality

--- a/index.html
+++ b/index.html
@@ -89,13 +89,16 @@
             </span>
         </div>
         <div class="sheets-folder-cont", id="sheets-folder">
-            <div class="sheet-folder", id="sheet-box">Sheet-1</div>
+            <!-- <div class="sheet-folder", id="0"> -->
+                <!-- <div class="sheet-content">Sheet1</div> -->
+            <!-- </div> -->
         </div>
     </div>
 
     <script src="./grid.js"></script>
-    <script src="./cell-properties.js"></script>
     <script src="./cycleValidation.js"></script>
+    <script src="./sheetsHandling.js"></script>
+    <script src="./cell-properties.js"></script>
     <script src="./cyclicPathTrace.js"></script>
     <script src="./formula.js"></script>
 </body>
