:art: Added comments, implemented upload, download functionality

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-    <title>Sheets(47:00)</title> 
+    <title>Sheets</title> 
 </head>
 <body>
     <div class="page-actions-cont">
@@ -18,13 +18,13 @@
         <div class="page-action">Help</div>
     </div>
     <div class="cellprop-actions-cont">
-        <span class="material-icons">
+        <span class="material-icons copy">
             content_copy
         </span>
-        <span class="material-icons">
+        <span class="material-icons cut">
             content_cut
         </span>
-        <span class="material-icons">
+        <span class="material-icons paste">
             content_paste
         </span>
         <select class="font-family-prop">
@@ -69,6 +69,12 @@
             </span>
             <input type="color" class="BGcolor-prop">
         </div>
+        <span class="material-icons download">
+            cloud_download
+        </span>
+        <span class="material-icons open">
+            cloud_upload
+        </span>
     </div>
     <div class="formula-actions-cont">
         <input type="text" readonly class="address-bar" id="address-bar">
@@ -99,7 +105,10 @@
     <script src="./cycleValidation.js"></script>
     <script src="./sheetsHandling.js"></script>
     <script src="./cell-properties.js"></script>
+    <script src="./cutCopyPaste.js"></script>
     <script src="./cyclicPathTrace.js"></script>
     <script src="./formula.js"></script>
+    <script src="./openSave.js"></script>
+    
 </body>
 </html>
