:beers: Improved folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
@@ -101,14 +101,14 @@
         </div>
     </div>
 
-    <script src="./grid.js"></script>
-    <script src="./cycleValidation.js"></script>
-    <script src="./sheetsHandling.js"></script>
-    <script src="./cell-properties.js"></script>
-    <script src="./cutCopyPaste.js"></script>
-    <script src="./cyclicPathTrace.js"></script>
-    <script src="./formula.js"></script>
-    <script src="./openSave.js"></script>
+    <script src="./js/grid.js"></script>
+    <script src="./js/cycleValidation.js"></script>
+    <script src="./js/sheetsHandling.js"></script>
+    <script src="./js/cell-properties.js"></script>
+    <script src="./js/cutCopyPaste.js"></script>
+    <script src="./js/cyclicPathTrace.js"></script>
+    <script src="./js/formula.js"></script>
+    <script src="./js/openSave.js"></script>
     
 </body>
 </html>
